Fix logs, always dealing 3h3h and logo z-index

--- a/client/src/styles/TableLogo.scss
+++ b/client/src/styles/TableLogo.scss
@@ -14,6 +14,7 @@
   @media screen and (max-width: $screen-large) {
     right: 25px !important;
   }
+  z-index: 1;
 }
 
 .logo-img {
